--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>  Hi, my name is Brandon. I've worked as a Structural Engineer because I am fascinated by the mechanics of what holds up our civilization. Yet, I've found myself diving deeper into how buildings also support the individuals. What is that inspires us about tall windows? How do natural materials affect our sense of peace?</p>
         </div>
 
         <div class="row">
@@ -96,10 +96,9 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Engineer, Designer, Builder</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              An engineer with knowledge in structural design and construction whose research and focus is on designing better buildings happier and healthier individuals.
             </p>
             <div class="row">
               <div class="col-lg-6">
