--- a/index.html
+++ b/index.html
@@ -45,14 +45,11 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/1C4A5280.JPG" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.facebook.com/brandon.byers.79" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/brandon-s-byers/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -62,8 +59,8 @@
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <!-- <li><a href="#services"><i class="bx bx-server"></i> Services</a></li> -->
+          <!-- <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li> -->
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -75,7 +72,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Brandon S. Byers, EIT, WELL AP</h1>
+      <h1>Brandon S. Byers</h1>
       <p>I'm <span class="typed" data-typed-items="an Engineer, a Builder, an Explorer, a WELL AP"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -103,16 +100,16 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 9 February 1994</li>
+                  <!-- <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 9 February 1994</li> -->
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 706-910-5433</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Palo Alto, CA</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 26</li>
+                  <!-- <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 26</li> -->
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> M.Sc</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> brandonsbyers@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> bbyers3@stanford.edu</li>
                 </ul>
               </div>
             </div>
@@ -187,9 +184,9 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">BIM <i class="val">100%</i></span>
+              <span class="skill">BIM <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -201,7 +198,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">SketchUp <i class="val">75%</i></span>
+              <span class="skill">SketchUp <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -212,21 +209,21 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">R <i class="val">80%</i></span>
+              <span class="skill">R <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Power BI <i class="val">90%</i></span>
+              <span class="skill">Power BI <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Microsoft Office and Visual Basic <i class="val">55%</i></span>
+              <span class="skill">Microsoft Office and Visual Basic <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -245,14 +242,14 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Here is a brief summary of my resume</p>
+          <!-- <p>Here is a brief summary of my resume</p> -->
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <h4>Brandon S. Byers</h4>
+              <h4>Brandon S. Byers, EIT, WELL AP</h4>
               <p><em>Driven and collaborative engineer with over 2 years of design and construction experience in the built environment, whose focus is on building egalitarian spaces for happier and healthier occupants.</em></p>
               <ul>
                 <li>Stanford, CA</li>
@@ -345,7 +342,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Here are a collection of projects from school and </p>
         </div>
 
         <div class="row" data-aos="fade-up">
