--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="profile">
         <img src="assets/img/1C4A5280.JPG" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Brandon S. Byers</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/brandon.byers.79" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.linkedin.com/in/brandon-s-byers/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
