--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Mosul-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Mosul-1.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Mosul-1.jpg" data-gall="portfolioGallery" class="venobox" title="Mosul Dam - Work 1"><i class="bx bx-plus"></i></a>
-                <a href="Mosul-project.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/Mosul-1.JPG" data-gall="portfolioGallery" class="venobox" title="Mosul Dam - Work 1"><i class="bx bx-plus"></i></a>
+                <a href="projects/Mosul-project.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
