--- a/Mosul-project.html
+++ b/Mosul-project.html
@@ -95,9 +95,9 @@
           <div class="owl-carousel portfolio-details-carousel">
             <img src="assets/img/portfolio/Mosul-1.JPG" class="img-fluid" alt="">
             <img src="assets/img/portfolio/Mosul-2.JPG" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/Mosul-3.JPG" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Mosul-3.JPG" style="max-width:40%;" alt="">
             <img src="assets/img/portfolio/Mosul-4.JPG" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/Mosul-5.JPG" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Mosul-5.JPG" style="max-width:40%;" alt="">
           </div>
 
           <div class="portfolio-info">
@@ -115,7 +115,7 @@
         <div class="portfolio-description">
           <h2>Mosul Dam Project</h2>
           <p>
-            I spent 8 months out on Mosul Dam... pretty cool!
+            With AECOM I went out to work on Mosul Dam in Northern Iraq for 8 months. I was the project engineer for the team and assited our field Geological and Geotechnical Engineers, our Project Manager, and our Technical Manager.
           </p>
         </div>
 
