--- a/Mosul-project.html
+++ b/Mosul-project.html
@@ -104,7 +104,7 @@
             <h3>Project information</h3>
             <ul>
               <li><strong>Category</strong>: Professional Experience</li>
-              <li><strong>Client</strong>: AECOM</li>
+              <li><strong>Company</strong>: AECOM</li>
               <li><strong>Project date</strong>: July 2018 to February 2019</li>
            <!--   <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
             </ul>
