--- a/index.html
+++ b/index.html
@@ -362,23 +362,23 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Mosul-1.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Mosul-1.JPG" data-gall="portfolioGallery" class="venobox" title="Mosul Dam - Work 1"><i class="bx bx-plus"></i></a>
-                <a href="projects/Mosul-project.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/Mosul-1.JPG" data-gall="portfolioGallery" class="venobox" title="Mosul Dam"><i class="bx bx-plus"></i></a>
+                <a href="Mosul-project.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/oura-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Oura - Personal 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/oura-1.jpg" data-gall="portfolioGallery" class="venobox" title="Oura"><i class="bx bx-plus"></i></a>
+                <a href="Oura-project.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-work">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -386,59 +386,59 @@
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-school">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/pbl-3.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="PBL - School 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/pbl-3.png" data-gall="portfolioGallery" class="venobox" title="Global A/E/C - VR Project"><i class="bx bx-plus"></i></a>
+                <a href="pbl-project.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Apple Health - Personal 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/clark-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="Clark - Work 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/clark-2.jpg" data-gall="portfolioGallery" class="venobox" title="Clark Construction Position"><i class="bx bx-plus"></i></a>
+                <a href="Clark-project.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-school">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/SimaPro-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="SimaPro - School 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/SimaPro-2.jpg" data-gall="portfolioGallery" class="venobox" title="LCA Projects"><i class="bx bx-plus"></i></a>
+                <a href="Simapro-project.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-school">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/systems-1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Systems Map - School 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/systems-1.png" data-gall="portfolioGallery" class="venobox" title="Systems Mapping"><i class="bx bx-plus"></i></a>
+                <a href="Systems-project.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -446,7 +446,7 @@
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
