--- a/Mosul-project.html
+++ b/Mosul-project.html
@@ -95,9 +95,9 @@
           <div class="owl-carousel portfolio-details-carousel">
             <img src="assets/img/portfolio/Mosul-1.JPG" class="img-fluid" alt="">
             <img src="assets/img/portfolio/Mosul-2.JPG" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/Mosul-3.JPG" style="max-width:40%;" alt="">
+            <img src="assets/img/portfolio/Mosul-3.JPG" class="text-center" style="max-width:60%;" alt="">
             <img src="assets/img/portfolio/Mosul-4.JPG" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/Mosul-5.JPG" style="max-width:40%;" alt="">
+            <img src="assets/img/portfolio/Mosul-5.JPG" class="text-center" style="max-width:60%;" alt="">
           </div>
 
           <div class="portfolio-info">
