--- a/pbl-project.html
+++ b/pbl-project.html
@@ -93,9 +93,9 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/portfolio/oura-1.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/oura-2.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/oura-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/pbl-1.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/pbl-2.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/pbl-3.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
