--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Mosul-1.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Mosul-1.JPG" class="img-thumbnail" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Mosul-1.JPG" data-gall="portfolioGallery" class="venobox" title="Mosul Dam"><i class="bx bx-plus"></i></a>
                 <a href="Mosul-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -390,7 +390,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-school">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/pbl-3.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/pbl-3.png" class="img-thumbnail" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/pbl-3.png" data-gall="portfolioGallery" class="venobox" title="Global A/E/C - VR Project"><i class="bx bx-plus"></i></a>
                 <a href="pbl-project.html" title="More Details"><i class="bx bx-link"></i></a>
