--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/oura-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/oura-1.jpg" height="200" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/oura-1.jpg" data-gall="portfolioGallery" class="venobox" title="Oura"><i class="bx bx-plus"></i></a>
                 <a href="Oura-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -398,15 +398,15 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/apple-1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Apple Health - Personal 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/apple-1.png" data-gall="portfolioGallery" class="venobox" title="Apple Watch Health"><i class="bx bx-plus"></i></a>
+                <a href="Apple-project.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div> 
-          </div> -->
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
