--- a/index.html
+++ b/index.html
@@ -184,16 +184,16 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">BIM <i class="val">90%</i></span>
+              <span class="skill">BIM <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Revit <i class="val">90%</i></span>
+              <span class="skill">Revit <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -223,9 +223,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Microsoft Office and Visual Basic <i class="val">90%</i></span>
+              <span class="skill">Microsoft Office and Visual Basic <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -370,7 +370,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/oura-1.jpg" height="200" alt="">
+              <img src="assets/img/portfolio/oura-1.jpg" height="400" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/oura-1.jpg" data-gall="portfolioGallery" class="venobox" title="Oura"><i class="bx bx-plus"></i></a>
                 <a href="Oura-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -380,7 +380,7 @@
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-thumbnail" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="Meal Box? - Work 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -400,7 +400,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/apple-1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/apple-1.png" class="img-thumbnail" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/apple-1.png" data-gall="portfolioGallery" class="venobox" title="Apple Watch Health"><i class="bx bx-plus"></i></a>
                 <a href="Apple-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -410,7 +410,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/clark-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/clark-2.jpg" class="img-thumbnail" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/clark-2.jpg" data-gall="portfolioGallery" class="venobox" title="Clark Construction Position"><i class="bx bx-plus"></i></a>
                 <a href="Clark-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -420,7 +420,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-school">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/SimaPro-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/SimaPro-2.jpg" class="img-thumbnail" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/SimaPro-2.jpg" data-gall="portfolioGallery" class="venobox" title="LCA Projects"><i class="bx bx-plus"></i></a>
                 <a href="Simapro-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -430,7 +430,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-school">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/systems-1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/systems-1.png" class="img-thumbnail" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/systems-1.png" data-gall="portfolioGallery" class="venobox" title="Systems Mapping"><i class="bx bx-plus"></i></a>
                 <a href="Systems-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -440,7 +440,7 @@
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-thumbnail" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Plant Biometrics - Personal 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
