--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-school">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/pbl-3.png" class="img-thumbnail" alt="">
+              <img src="assets/img/portfolio/pbl-3.png" class="portfolio-img" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/pbl-3.png" data-gall="portfolioGallery" class="venobox" title="Global A/E/C - VR Project"><i class="bx bx-plus"></i></a>
                 <a href="pbl-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -420,7 +420,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-school">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/SimaPro-2.jpg" class="img-thumbnail" alt="">
+              <img src="assets/img/portfolio/SimaPro-2.jpg" class="portfolio-img" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/SimaPro-2.jpg" data-gall="portfolioGallery" class="venobox" title="LCA Projects"><i class="bx bx-plus"></i></a>
                 <a href="Simapro-project.html" title="More Details"><i class="bx bx-link"></i></a>
