--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Mosul-1.JPG" class="img-thumbnail" alt="">
+              <img src="assets/img/portfolio/Mosul-1.JPG" class="portfolio-img" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Mosul-1.JPG" data-gall="portfolioGallery" class="venobox" title="Mosul Dam"><i class="bx bx-plus"></i></a>
                 <a href="Mosul-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -370,7 +370,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/oura-1.jpg" height="400" alt="">
+              <img src="assets/img/portfolio/oura-1.jpg" class="portfolio-img" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/oura-1.jpg" data-gall="portfolioGallery" class="venobox" title="Oura"><i class="bx bx-plus"></i></a>
                 <a href="Oura-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -380,7 +380,7 @@
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-thumbnail" alt="">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="portfolio-img" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="Meal Box? - Work 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -400,7 +400,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/apple-1.png" class="img-thumbnail" alt="">
+              <img src="assets/img/portfolio/apple-1.png" class="portfolio-img" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/apple-1.png" data-gall="portfolioGallery" class="venobox" title="Apple Watch Health"><i class="bx bx-plus"></i></a>
                 <a href="Apple-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -410,7 +410,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/clark-2.jpg" class="img-thumbnail" alt="">
+              <img src="assets/img/portfolio/clark-2.jpg" class="portfolio-img" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/clark-2.jpg" data-gall="portfolioGallery" class="venobox" title="Clark Construction Position"><i class="bx bx-plus"></i></a>
                 <a href="Clark-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -430,7 +430,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-school">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/systems-1.png" class="img-thumbnail" alt="">
+              <img src="assets/img/portfolio/systems-1.png" class="portfolio-img" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/systems-1.png" data-gall="portfolioGallery" class="venobox" title="Systems Mapping"><i class="bx bx-plus"></i></a>
                 <a href="Systems-project.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -440,7 +440,7 @@
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-thumbnail" alt="">
+              <img src="assets/img/portfolio/portfolio-9.jpg" class="portfolio-img" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Plant Biometrics - Personal 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
