--- a/Mosul-project.html
+++ b/Mosul-project.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Brandon's Site</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/bldg-icon.png" rel="icon">
+  <link href="assets/img/bldg-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -48,7 +48,7 @@
         <img src="assets/img/1C4A5280.JPG" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Brandon S. Byers</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.facebook.com/brandon.byers.79" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <!-- <a href="https://www.facebook.com/brandon.byers.79" class="facebook"><i class="bx bxl-facebook"></i></a> -->
           <a href="https://www.linkedin.com/in/brandon-s-byers/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -115,7 +115,10 @@
         <div class="portfolio-description">
           <h2>Mosul Dam Project</h2>
           <p>
-            With AECOM I went out to work on Mosul Dam in Northern Iraq for 8 months. I was the project engineer for the team and assited our field Geological and Geotechnical Engineers, our Project Manager, and our Technical Manager.
+            I worked for AECOM as a structural engineer on dams and hydraulic structures for a couple years after finishing undergrad. With AECOM, the most exciting and rewarding project I got to work on was Mosul Dam in Northern Iraq for 8 months. I was the project engineer for the team and assited our field Geological and Geotechnical Engineers, our Project Manager, and our Technical Manager. In addition, I developed a training program for the Iraqi Ministry of Water Resources' future project engineers on QA/QC procedures and Microsoft Excel tools.
+          </p>
+          <p>
+            During my time there I lived, worked, and played all on the same compound with the Contractor, the laborers, the Owner's Rep., and my colleagues. This sort of close-quarters live-work-play environment was both stressful and rewarding as we all suffered and bond together in the difficult times: from sand storms to scorpions and helicopters to holidays! It was also during this time that I got my Oura ring and became interested in how a hostile ecological environment coupled with demanding daily work routines would impact my health. Our offices and living quarters were modular and rudimentary, I missed the small things like natural light or even a simple painting on the wall. Little effort was given nor afforded to how the built environment affected us, the inhabitants.
           </p>
         </div>
 
