--- a/Oura-project.html
+++ b/Oura-project.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+ 
+  <title>Brandon's Site</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/bldg-icon.png" rel="icon">
+  <link href="assets/img/bldg-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -48,7 +48,7 @@
         <img src="assets/img/1C4A5280.JPG" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Brandon S. Byers</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.facebook.com/brandon.byers.79" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <!-- <a href="https://www.facebook.com/brandon.byers.79" class="facebook"><i class="bx bxl-facebook"></i></a> -->
           <a href="https://www.linkedin.com/in/brandon-s-byers/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -113,7 +113,10 @@
         <div class="portfolio-description">
           <h2>Oura Ring Data Visualization</h2>
           <p>
-            I have been wearing an Oura Ring health tracker since early 2019. Personally, I'm really interested in tracking various biometrics and Oura provides a lot of data to play with. Using RStudio I started playing around with my data. It's been interesting for me to note macro trends in my sleep and health. I started grad school in the fall of 2019 and had a difficult quarter beginning of 2020. Surprisingly, after shelter in place in late March 2020 my sleep score started to increase!
+            I have been wearing an Oura Ring health tracker since early 2019. Personally, I'm really interested in tracking various biometrics and Oura provides a lot of data to play with. Using RStudio I started playing around with some data visualization techniques. It's been interesting for me to note macro trends in my sleep and health! To explain, I started grad school in the fall of 2019 and had a difficult quarter beginning of 2020, which describes the dip in my data. Surprisingly, after shelter in place in late March 2020 my sleep score started to increase! This trend has been seen at scale and, personally, is associate with going out less and being able to sleep in a bit more considering my desk is only 10 feet from my bed.
+          </p>
+          <p>
+        What else is interesting to me is my net decrease in resting heart rate. Overall, this is a positive sign of readiness and recovery. This appears to be correlated to levels of deep sleep. In the future, I plan developing CDA models to understand what factors are most driving my sleep quality!
           </p>
         </div>
 
