--- a/Simapro-project.html
+++ b/Simapro-project.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Brandon's Site</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/bldg-icon.png" rel="icon">
+  <link href="assets/img/bldg-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -48,7 +48,7 @@
         <img src="assets/img/1C4A5280.JPG" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Brandon S. Byers</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.facebook.com/brandon.byers.79" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <!-- <a href="https://www.facebook.com/brandon.byers.79" class="facebook"><i class="bx bxl-facebook"></i></a> -->
           <a href="https://www.linkedin.com/in/brandon-s-byers/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -113,7 +113,9 @@
           <h2>Life Cycle Assessments using SimaPro</h2>
           <p>
             For both my Life Cycle Assessment class (CEE 226) and Materials for Sustainable Built Environments class (CEE 223) I have worked to developed an LCA for our group projects. For CEE 226 we worked directly with the sustainability team at San Francisco International Airport to develop a report for them comparing the life cycle costs and life cycle impact of their current emergency generator system, an alternative system that uses biofuel, and a third alternative system that replaces their generators with a battery pack system.
-            For CEE 223 my team developed mass timber and hybrid timber-steel structural alternatives for the roof of a Palo Alto Mosque that discussed the constructability, life cycle environmental impacts, and total costs over time.
+          </p>
+          <p>
+            For CEE 223 my team developed mass timber and hybrid timber-steel structural alternatives for the roof of a Palo Alto Mosque that discussed the constructability, life cycle environmental impacts, and total costs over time. Using SimaPro I was able to determine that the CLT roof alternative depleted more materials and had a slightly worse net impact on human health from production to installation stages.
           </p>
         </div>
 
