--- a/pbl-project.html
+++ b/pbl-project.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Brandon's Site</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/bldg-icon.png" rel="icon">
+  <link href="assets/img/bldg-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -48,7 +48,7 @@
         <img src="assets/img/1C4A5280.JPG" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Brandon S. Byers</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.facebook.com/brandon.byers.79" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <!-- <a href="https://www.facebook.com/brandon.byers.79" class="facebook"><i class="bx bxl-facebook"></i></a> -->
           <a href="https://www.linkedin.com/in/brandon-s-byers/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -113,7 +113,10 @@
         <div class="portfolio-description">
           <h2>Computer Integrated A/E/C Global Teamwork</h2>
           <p>
-            For several months I worked with Team Atlantic on developing a new University Building. Our team consisted of an architect, two construction managers, two structural engineers, and an MEP engineer. Our team members are at university in China, Australia, the U.S., and Denmark. We used Virtual Reality and BIM 360 to develop multiple solutions and be able to walk within and engage with our building design. Working across 5 time-zones and many disciplines within the A/E/C industry our final proposed solution to dozens of academic and industry professionals won two awards: "To Industrialize, or Not To Industrialize? Shared Risk & Reward" sponsored by DPR Construction, and "Intelligent Interoperability between Models & Disciplines" sponsored by Buro Happold. Please access the link and explore our project <a href="http://pbl.stanford.edu/AEC%20projects/Year%202019-2020/Spring2020/ATLANTIC%202020_Spring%20Presentation.pdf">details</a> and <a href="https://www.youtube.com/watch?v=qHHFa7q0210&feature=youtu.be&ab_channel=aecgopbl">presentation</a>!
+            For several months I worked with Team Atlantic on developing a new University Building. Our team consisted of an architect, two construction managers, two structural engineers, and an MEP engineer. Our team members are at university in China, Australia, the U.S., and Denmark. We used Virtual Reality and BIM 360 to develop multiple solutions and be able to walk within and engage with our building design. Personally, I used the VIVE VR headset for the project and using these tools I learned the potential of stakeholders interacting with a building before its construction. New tools in the A/E/C industry are allowing us to rapidly prototype solutions and innovate faster than we ever have before.
+          </p>
+          <p>
+            Working across 5 time-zones and many disciplines within the A/E/C industry our final proposed solution to dozens of academic and industry professionals won two awards: "To Industrialize, or Not To Industrialize? Shared Risk & Reward" sponsored by DPR Construction, and "Intelligent Interoperability between Models & Disciplines" sponsored by Buro Happold. Please access the link and explore our project <a href="http://pbl.stanford.edu/AEC%20projects/Year%202019-2020/Spring2020/ATLANTIC%202020_Spring%20Presentation.pdf">details</a> and <a href="https://www.youtube.com/watch?v=qHHFa7q0210&feature=youtu.be&ab_channel=aecgopbl">presentation</a>!
           </p>
         </div>
 
