--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </div>
     </section><!-- End Facts Section -->
 
-    <!-- ======= Skills Section ======= -->
+    <!-- ======= Skills Section ======= 
     <section id="skills" class="skills section-bg">
       <div class="container">
 
@@ -281,6 +281,33 @@
                 <li>Conducted literature review on the influence of building environmental factors on occupant wellbeing and cognitive performance</li>
                 <li>Analyzed test data in R for descriptive statistics and data visualization of lab studies to demonstrate influence of room environment on occupant wellbeing</li>
                 <li>Performed reliability and variance statistical analysis on survey studies on building feature impact on occupants</li>
+              </ul>
+            </div>
+            
+            <h3 class="resume-title">Interests and Skills</h3>
+            <div class="resume-item">
+              <h4>Technical</h4>
+              <ul>
+                <li>Data Analysis and Visualization: R, Power BI</li>
+                <li>Building Information Modeling: BIM 360, Revit, Sketchup</li>
+                <li>Microsoft Office and Visual Basic</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Interpersonal</h4>
+              <ul>
+                <li>Collaboration</li>
+                <li>Problem Solving</li>
+                <li>Communication</li>
+                <li>Adaptability</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Personal</h4>
+              <ul>
+                <li>Bike riding and bicycle maintenance</li>
+                <li>Letter writing and calligraphy</li>
+                <li>Plant growth and propagation</li>
               </ul>
             </div>
           </div>
