--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
               <div class="col-lg-6">
                 <ul>
                   <!-- <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 9 February 1994</li> -->
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 706-910-5433</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> M.Sc</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Palo Alto, CA</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <!-- <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 26</li> -->
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> M.Sc</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> brandonsbyers@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> bbyers3@stanford.edu</li>
                 </ul>
               </div>
