--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <!-- <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 9 February 1994</li> -->
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> M.Sc</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Palo Alto, CA</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>CV:</strong> <a href="assets/CV_Byers.pdf" title="Download"></a></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>CV:</strong> <a href="assets/CV_Byers.pdf" download>Download</a> </li>
                 </ul>
               </div>
               <div class="col-lg-6">
