Added sketch project

--- a/index.html
+++ b/index.html
@@ -467,15 +467,15 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="portfolio-img" alt="">
+              <img src="assets/img/portfolio/sketch-1.jpg" class="portfolio-img" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Plant Biometrics - Personal 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/sketch-1.jpg" data-gall="portfolioGallery" class="venobox" title="Sketches"><i class="bx bx-plus"></i></a>
+                <a href="sketch-project.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div> -->
+          </div>
 
         </div>
 
