--- a/sketch-project.html
+++ b/sketch-project.html
@@ -94,10 +94,10 @@
 
           <div class="owl-carousel portfolio-details-carousel">
             <img src="assets/img/portfolio/sketch-1.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/sketch-2.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/sketch-3.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/sketch-4.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/sketch-5.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/sketch-2.jpg" class="text-center" style="max-width:60%;" alt="">
+            <img src="assets/img/portfolio/sketch-3.jpg" class="text-center" style="max-width:60%;" alt="">
+            <img src="assets/img/portfolio/sketch-4.jpg" class="text-center" style="max-width:60%;" alt="">
+            <img src="assets/img/portfolio/sketch-5.jpg" class="text-center" style="max-width:60%;" alt="">
           </div>
 
           <div class="portfolio-info">
@@ -113,7 +113,7 @@
         </div>
 
         <div class="portfolio-description">
-          <h2>Oura Ring Data Visualization</h2>
+          <h2>Sketches</h2>
           <p>
             I believe sketching to be another critical medium of communication. Sketches transcend the boundaries of language and career discipline making it a physical and universal language. By sketching I learn to focus on details of form and function as well as how to communicate them. For me, the practice of sketching is to train on symbolic syntax to better convey ideas. 
           </p>
